Front End Code Until Do Survey

--- a/survay-feedback/src/index.html
+++ b/survay-feedback/src/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SurvayFeedback</title>
+  <title>WeSurve</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://use.fontawesome.com/49b5e68ad8.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/animate.css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
