with Bug Fixes upto #20

--- a/survay-feedback/src/index.html
+++ b/survay-feedback/src/index.html
@@ -12,20 +12,25 @@
   
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  
+  <!-- <script src="node_modules/chart.js/src/chart.js"></script> -->
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
-  <link rel="icon" type="image/x-icon" href="assets/favicon.png" />
+  <!-- <link rel="stylesheet" href="/node_modules/angular2-busy/build/style/busy.css"> -->
+  <script type="text/javascript" src="./assets/pace.js"></script>
+  <!-- <script type="text/javascript" src="./assets/myjs.js"></script> -->
+  <link rel="icon" type="image/x-icon" href="assets/logo.png" />
   <style>
     body{
       margin:0;
       padding:0;
     }
   </style>
+  <script type="text/javascript" src="./assets/sidenav.js"></script>
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+  </app-root>
 </body>
 </html>
