Complete Angular Frontend

--- a/survay-feedback/src/index.html
+++ b/survay-feedback/src/index.html
@@ -18,7 +18,7 @@
 
   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
   <!-- <link rel="stylesheet" href="/node_modules/angular2-busy/build/style/busy.css"> -->
-  <script type="text/javascript" src="./assets/pace.js"></script>
+  <script type="text/javascript" data-pace-options='{ "ajax": false }' src="./assets/pace.js"></script>
   <!-- <script type="text/javascript" src="./assets/myjs.js"></script> -->
   <link rel="icon" type="image/x-icon" href="assets/logo.png" />
   <style>
